# docs/swagger.json
@@ -20,6 +20,44 @@
     "host": "127.0.0.1",
     "basePath": "/",
     "paths": {
+        "/api/reagents": {
+            "get": {
+                "description": "Публичный метод чтения данных",
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "reagents"
+                ],
+                "summary": "Список реагентов",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "Поиск",
+                        "name": "search",
+                        "in": "query"
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "type": "array",
+                            "items": {
+                                "$ref": "#/definitions/ds.Reagent"
+                            }
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "type": "object",
+                            "additionalProperties": true
+                        }
+                    }
+                }
+            }
+        },
         "/auth/login": {
             "post": {
                 "description": "Создаёт серверную сессию в Redis и устанавливает cookie session_id",
@@ -54,41 +92,6 @@
                     },
                     "400": {
                         "description": "Bad Request",
-                        "schema": {
-                            "type": "object",
-                            "additionalProperties": true
-                        }
-                    },
-                    "401": {
-                        "description": "Unauthorized",
-                        "schema": {
-                            "type": "object",
-                            "additionalProperties": true
-                        }
-                    },
-                    "500": {
-                        "description": "Internal Server Error",
-                        "schema": {
-                            "type": "object",
-                            "additionalProperties": true
-                        }
-                    }
-                }
-            }
-        },
-        "/auth/logout": {
-            "post": {
-                "description": "Удаляет серверную сессию из Redis и очищает cookie",
-                "produces": [
-                    "application/json"
-                ],
-                "tags": [
-                    "auth"
-                ],
-                "summary": "Выход пользователя",
-                "responses": {
-                    "200": {
-                        "description": "OK",
                         "schema": {
                             "type": "object",
                             "additionalProperties": true
@@ -149,42 +152,11 @@
                             "additionalProperties": true
                         }
                     },
-                    "500": {
-                        "description": "Internal Server Error",
+                    "409": {
+                        "description": "Conflict",
                         "schema": {
                             "type": "object",
                             "additionalProperties": true
-                        }
-                    }
-                }
-            }
-        },
-        "/reagents": {
-            "get": {
-                "description": "Публичный метод чтения данных",
-                "produces": [
-                    "application/json"
-                ],
-                "tags": [
-                    "reagents"
-                ],
-                "summary": "Список реагентов",
-                "parameters": [
-                    {
-                        "type": "string",
-                        "description": "Поиск",
-                        "name": "search",
-                        "in": "query"
-                    }
-                ],
-                "responses": {
-                    "200": {
-                        "description": "OK",
-                        "schema": {
-                            "type": "array",
-                            "items": {
-                                "$ref": "#/definitions/ds.Reagent"
-                            }
                         }
                     },
                     "500": {
@@ -257,6 +229,13 @@
                     "type": "string"
                 }
             }
+        }
+    },
+    "securityDefinitions": {
+        "SessionCookieAuth": {
+            "type": "apiKey",
+            "name": "session_id",
+            "in": "cookie"
         }
     }
 }
